--- a/GSP_to_NUTS1_REGION_CHECKER/odi_leeds.ipynb
+++ b/GSP_to_NUTS1_REGION_CHECKER/odi_leeds.ipynb
@@ -3869,7 +3869,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#experimental things that might be useful in the future/inspire further things"
+   ]
   },
   {
    "cell_type": "code",
