--- a/GSP_to_NUTS1_REGION_CHECKER/odi_leeds.ipynb
+++ b/GSP_to_NUTS1_REGION_CHECKER/odi_leeds.ipynb
@@ -58,7 +58,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "overlaid[overlaid.duplicated()]"
+    "#overlaid[overlaid.duplicated()]"
    ]
   },
   {
@@ -105,7 +105,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "display(grouped)"
+    "#display(grouped)"
    ]
   },
   {
@@ -123,7 +123,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "display(merged)"
+    "#display(merged)"
    ]
   },
   {
@@ -3548,7 +3548,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "display(len(nuts1_regions_list))"
+    "#display(len(nuts1_regions_list))"
    ]
   },
   {
